--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 COP_290_Assignment1-main/__pycache__/*
 COP_290_Assignment1-main/instance/*
 COP_290_Assignment1-main/Data_folder/*
+COP_290_Assignment1-main/TableData/*
