Added virtual environment to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ COP_290_Assignment1-main/__pycache__/*
 COP_290_Assignment1-main/instance/*
 COP_290_Assignment1-main/Data_folder/*
 COP_290_Assignment1-main/TableData/*
+COP_290_Assignment1/.venv/*
